# bibtool

./: .cvsignore  .gitignore  Changes  Changes.tex  Changes.xml  INSTALL  Makefile  README  README.md  THANKS  ToDo  check.c  config.h  configure  configure.ac  configure.in  crossref.c  database.c  entry.c  error.c  expand.c  init.c  install.tex  io.c  key.c  macros.c  main.c  makefile.ami  makefile.ata  makefile.dos  makefile.unx  mkdirchain  names.c  parse.c  print.c  pxfile.c  pxfile.man  record.c  rewrite.c  rsc.c  (+10 more)
.github/workflows/: build-test.yml
AutoConf/: config.h.in  makefile.in  reconfig.h.in
BibTcl/: .gitignore  Makefile  Makefile.in  README  bibtcl.bib  bibtcl.ltx  bibtcl.tex  bibtool.c  configure  configure.in  dina4.sty  main.tcl  version.tex
Doc/: .cvsignore  Makefile  bibtool-doc.sty  bibtool.1  bibtool.aux  bibtool.bbl  bibtool.bib  bibtool.idx  bibtool.ind  bibtool.tex  c.tex  c_get.pl  c_lib.ind  c_lib.tex  c_main.tex  config.tex  dina4.sty  make_version.pl  ref_card.tex  version.tex
HTML/: BibTool.lh  GPL.html  L2H.pl  L2H.pm  L2H_file.pm  LaTeX.lh  Makefile  bibtool.x2h  bibtool2html
HTML/lib/: BibTool.lh  Changes.lh  L2H.pm  L2H_file.pm  LaTeX.lh  TeX.lh  hyperref.lh  hyph_en.pm  lang.en
HTML/profile/: index.html  nav.css  site.css  top.html
Lib/: biblatex.rsc  braces.rsc  check_y.rsc  default.rsc  field.rsc  improve.rsc  iso2tex.rsc  month.rsc  opt.rsc  sort_fld.rsc  tex_def.rsc
Linux/: ld-version-script
MSDOS/: link.dj  link.msc  link.wat
Perl/: bibtool.pl
Tcl/: bibtool.tcl
Test/: BUnit.pm  add_field.t  apply_alias.t  apply_include.t  apply_modify.t  bibtex_env_name.t  bibtex_search_path.t  bibtoolrsc.t  check_rule.t  clear_ignored_words.t  count_all.pl  count_all.t  count_used.pl  count_used.t  database.pl  default_key.t  delete_field.t  expand_macros.t  extract_file.pl  extract_file.t  ignored_word.t  input.t  key.pl  key_base.t  key_format.pl  key_format.t  key_make_alias.t  key_number_separator.t  macro_file.t  macros.pl  main.pl  main.t  makefile  new_field_type.t  new_format_type.pl  new_format_type.t  output_file.pl  output_file.t  pass_comments.t  print.pl  (+32 more)
cmd/: .gitignore  binding.c  binding.h  builtin.h  cboolean.c  cclass.c  ccons.c  cdb.c  cfunction.c  clist.c  cnumber.c  crecord.c  cstring.c  lcore.c  lcore.h  linereader.c  linereader.h  literate.c  literate.h  lreader.c  lreader.h  makefile  rec_sort.c  rec_sort.h  symdef.c  symdef.h  t_parser.c  t_stack.c  t_stack.h  term.c  term.h  test_t.c  tester.c  tstack.c  tstack.h
cmd/class/: boolean.c  class.c  db.c  function.c  list.c  number.c  record.c  string.c
cmd/doc/: .gitignore  bibtool-doc.sty  bibtool3.tex
cmd/test/: .gitignore  PUnit.pm  and.t  apply_alias.t  apply_include.t  apply_modify.t  arith-1.tc  arith-2.tc  arith-3.tc  arith.t  boolean.t  crossref-limit.t  crossref_limit-1.tc  divide.t  eq.t  err-2.tc  error.t  field-1.tc  field.t  ge.t  gt.t  language.t  le.t  list-1.tc  list-10.tc  list-20.tc  list.t  lt.t  makefile  minus.t  mod.t  ne.t  not.t  num-1.tc  num-2.tc  num-3.tc  number.t  or.t  plus-1.tc  plus-2.tc  (+11 more)
cmd/test/eval/: boolean.t  compare.t  database.t  eq.t  function.t  language.t  list.t  numeric.t  print.t  rsc_boolean.t  rsc_fct.t  rsc_numeric.t  rsc_string.t  set.t  string.t  version.t
cmd/test/parse/: arith.t  boolean.t  field.t  language.t  list.t  numeric.t  rsc_boolean.t  rsc_fct.t  rsc_numeric.t  rsc_string.t  string.t
doc/: Makefile  bibtool-doc.sty  bibtool.1  bibtool.bib  bibtool.ist  bibtool.tex  c_get.pl  c_lib.tex  config.tex  make_version.pl  ref_card.tex
html/: L2H.pl  Makefile  bibtool2html
html/lib/: TeX.lh  german.lh  hyph_de.pm  hyph_en.pm  inputenc.lh  lang.de  makeidx.lh
html/profile/: index.html  print.css  site.css  site.js
include/bibtool/: bibtool.h  check.h  config.h  crossref.h  database.h  entry.h  error.h  expand.h  general.h  init.h  io.h  key.h  keynode.h  macros.h  names.h  parse.h  print.h  pxfile.h  record.h  regex.h  resource.h  rewrite.h  rsc.h  s_parse.h  sbuffer.h  stack.h  symbols.h  tex_aux.h  tex_read.h  type.h  version.h  wordlist.h
lib/: biblatex.rsc  braces.rsc  check_y.rsc  default.rsc  field.rsc  improve.rsc  iso2tex.rsc  keep_biblatex.rsc  keep_bibtex.rsc  month.rsc  opt.rsc  sort_fld.rsc  tex_def.rsc
regex-0.12/: Makefile  config.h  config.status  configure  configure.in
regex-0.12/doc/: Makefile
regex-0.12/test/: Makefile
select/: .gitignore  com_test  com_test.c  commands.c  commands.h  commands.y  eval_term.c  eval_term.h  makefile  sample-1  sample-2  sample-3  sample-4  sel.c  sel_test.c  select.c  select.h  select.y  tagged.c  tagged.h  term.c  term.h
test/: .gitignore  BUnit.pm  add_field.t  apply_alias.t  apply_include.t  apply_modify.t  bibtex_env_name.t  bibtex_search_path.t  bibtool.t  bibtoolrsc.t  check_double.t  check_error_rule.t  check_rule.t  check_warning_rule.t  clear_ignored_words.t  count_all.t  count_used.t  crossref_map.t  default_key.t  delete_field.t  expand_macros.t  expand_xdata.t  extract_file.t  fmt_et_al.t  fmt_name_name.t  fmt_name_pre.t  fmt_title_title.t  ignored_word.t  input.t  keep_field.t  key_base.t  key_format.t  key_make_alias.t  key_number_separator.t  lib__check_y.t  lib__improve.t  line_breaking.t  macro_file.t  main.t  makefile  (+33 more)
test/bib/: x1.bib
test/lib/: BUnit.pm
