dnl ***************************************************************************
dnl $Id: configure.in,v 1.4 2007-02-08 19:47:16 gene Exp $
dnl ===========================================================================
dnl 
dnl This file is part of BibTool.
dnl It is distributed under the GNU General Public License.
dnl See the file COPYING for details.
dnl 
dnl (c) 1996-2002 Gerd Neugebauer
dnl 
dnl Net: gene@gerd-neugebauer.de
dnl 
dnl ***************************************************************************
AC_REVISION($Revision: 1.4 $)dnl
AC_PREREQ(2.12)

dnl ---------------------------------------------------------------------------
dnl Process this file with autoconf to produce a configure script.
AC_INIT(sbuffer.c)

dnl ---------------------------------------------------------------------------
dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl AC_PATH_PROGS(PERL,perl perl5.003 perl4.036 /usr/local/bin/perl)
dnl AC_PATH_PROGS(TCLSH,tclsh tclsh-8.0 tclsh-8.1 tclsh-8.2 tclx,/usr/local/bin/tclsh)

dnl ---------------------------------------------------------------------------
dnl for regexp
AC_AIX
AC_ISC_POSIX
AC_MINIX

dnl ---------------------------------------------------------------------------
dnl Checks for libraries.

dnl ---------------------------------------------------------------------------
dnl Checks for header files.
AC_HEADER_STDC
AC_STDC_HEADERS

dnl ---------------------------------------------------------------------------
dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl ---------------------------------------------------------------------------
dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MEMCMP

dnl ---------------------------------------------------------------------------
dnl Check for headers.
AC_CHECK_HEADERS(string.h)
AC_CHECK_HEADERS(stdlib.h)
AC_CHECK_HEADERS(time.h)
AC_CHECK_FUNCS(getenv)
AC_CHECK_FUNCS(strrchr)

dnl ---------------------------------------------------------------------------
AC_ARG_WITH(kpathsea,Use the KPATHSEA library.,,with_kpathsea=yes)

if test $with_kpathsea = no; then
	kpathsea_dir=
	kpathsea_lib=
	kpathsea_def=
else
	AC_MSG_CHECKING(for kpathsea library)
	kpathsea_dir=
	kpathsea_lib=
	kpathsea_def=
	for cand in .. ../kpse3-2 kpse3-2 . 
	do
		if test -f $cand/kpathsea/tex-file.h ; then
			kpathsea_dir=$cand
			kpathsea_lib=$cand/kpathsea/STATIC/libkpathsea.a
			kpathsea_def="-DHAVE_LIBKPATHSEA -I$cand"
		fi
	done
	if test -z "$kpathsea_dir"; then
		AC_MSG_WARN(not found)
	else
		AC_MSG_RESULT($kpathsea_dir)
	fi
fi
AC_SUBST(kpathsea_dir)dnl
AC_SUBST(kpathsea_lib)dnl
AC_SUBST(kpathsea_def)dnl

dnl ---------------------------------------------------------------------------
dnl AC_CONFIG_SUBDIRS(regex-0.12)
dnl ---------------------------------------------------------------------------

dnl AC_CONFIG_SUBDIRS(BibTcl)

AC_CONFIG_HEADER(include/bibtool/config.h:AutoConf/config.h.in regex-0.12/config.h:AutoConf/reconfig.h.in)

AC_OUTPUT(makefile:AutoConf/makefile.in)

